--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "bluebird": "^3.4.6",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
+    "slugify": "^1.1.0",
     "crypto": "0.0.3",
     "deepmerge": "^1.2.0",
     "gravatar": "^1.5.2",
