--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,8 @@ LETSENCRYPT_MAIL=development@kings-dev.io
 MONGODB_USER=user
 MONGODB_PASS=password
 MONGODB_DATABASE=slapcountdown
-
+MONGODB_PORT=27018
+MONGODB_SERVER_PORT=28018
 
 APP_DEBUG=true
 AOT=false
