--- a/website/package.json
+++ b/website/package.json
@@ -53,9 +53,11 @@
     "jasmine-spec-reporter": "2.5.0",
     "karma": "^1.4.1",
     "karma-chrome-launcher": "^2.0.0",
-    "karma-jasmine": "^1.0.2",
     "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.4",
     "karma-remap-istanbul": "^0.2.1",
+    "phantomjs-prebuilt": "2.1.14",
     "protractor": "^4.0.14",
     "ts-node": "^2.0.0",
     "tslint": "~4.4.2",
