--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,8 @@
 FROM superbuddy/loopback-sdk-builder
 MAINTAINER Jurien Hamaker <jurien@kings-dev.io>
 
+ENV APP_DEBUG false
+
 COPY . /project
 RUN npm install
 
