--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -4,6 +4,9 @@ MAINTAINER Jurien Hamaker <jurien@kings-dev.io>
 ENV APP_DEBUG false
 
 COPY . /project
+
+RUN ls
+
 RUN npm install
 
 ENTRYPOINT ["/entrypoint.sh"]
