set correct path

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -3,10 +3,7 @@ MAINTAINER Jurien Hamaker <jurien@kings-dev.io>
 
 ENV APP_DEBUG false
 
-COPY . /project
-
-RUN ls
-
+COPY ./api /project
 RUN npm install
 
 ENTRYPOINT ["/entrypoint.sh"]
