--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,9 +1,16 @@
 FROM superbuddy/loopback-sdk-builder
 MAINTAINER Jurien Hamaker <jurien@kings-dev.io>
 
-ENV APP_DEBUG false
+WORKDIR /project
 
-COPY ./api /project
+ADD package.json /project/package.json
+RUN npm config set registry http://registry.npmjs.org
 RUN npm install
+RUN mv /project/node_modules /node_modules
+
+ENV APP_DEBUG false
+ENV AOT true
+
+ADD . /project
 
 ENTRYPOINT ["/entrypoint.sh"]
