--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -1,14 +1,18 @@
 FROM superbuddy/ng-cli-nginx
 MAINTAINER Jurien Hamaker <jurien@kings-dev.io>
 
+WORKDIR /project
+
+ADD package.json /project/package.json
+RUN npm config set registry http://registry.npmjs.org
+RUN npm install
+RUN mv /project/node_modules /node_modules
+
 ENV APP_DEBUG false
 ENV AOT true
 
-COPY ./website /project
+ADD . /project
 
 RUN mv /project/sdk /project/src/app/sdk
-
-RUN npm install
-#RUN npm test
 
 ENTRYPOINT ["/entrypoint.sh"]
