--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 
 services:
   frontend:
-    image: superbuddy/ng-cli-nginx
+    build: ./website
     env_file: 
       - .env
     ports:
@@ -24,7 +24,7 @@ services:
       - proxy-tier
 
   backend:
-    image: superbuddy/loopback-sdk-builder
+    build: ./api
     env_file: 
       - .env
     ports:
